刪除舊圖片

--- a/tainanfist/testdemov4.html
+++ b/tainanfist/testdemov4.html
@@ -98,7 +98,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="府城謎拳雛形v7" startnode="6" creator="Twine" creator-version="2.8.0" format="SugarCube" format-version="2.36.1" ifid="2AC7FFE6-4787-4918-8961-4466A7EBC28E" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@charset "UTF-8";
+	<tw-storydata name="府城謎拳雛形v7" startnode="6" creator="Twine" creator-version="2.6.2" format="SugarCube" format-version="2.36.1" ifid="2AC7FFE6-4787-4918-8961-4466A7EBC28E" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@charset "UTF-8";
 /* 匯入Animate.css  */
 importStyles("https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css")
 /* 自訂樣式： 字型 */
@@ -372,7 +372,7 @@ body.scene05 {
   background-position: center;
 }
 body.bossscene {
-  background-image: url("media/img/bossscene.jpg");
+  background-image: url("https://lh3.googleusercontent.com/d/1Jnr0_XRKQDijXwqtsAnGYack9wuB3-XY");
   min-height: 100vh;
   background-size: auto 100%;
   background-repeat: no-repeat;
@@ -4362,7 +4362,7 @@ Normal text. Normal text. Normal text. Normal text. Normal text. //emphasised te
   └&lt;&lt;link &#39;【第二章關卡2】&#39;&gt;&gt;&lt;&lt;goto &#39;第二章關卡2&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
   └&lt;&lt;link &#39;【第二章關卡3】&#39;&gt;&gt;&lt;&lt;goto &#39;第二章關卡3&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
   
-  &lt;&lt;link &#39;【片刻休息-午食】&#39;&gt;&gt;&lt;&lt;goto &#39;片刻休息1&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
+  &lt;&lt;link &#39;【片刻休息-午時】&#39;&gt;&gt;&lt;&lt;goto &#39;片刻休息1&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
   
   &lt;&lt;link &#39;【第三章】&#39;&gt;&gt;&lt;&lt;goto &#39;第三章0&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
   └&lt;&lt;link &#39;【第三章關卡1】&#39;&gt;&gt;&lt;&lt;goto &#39;第三章關卡1&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
@@ -4728,19 +4728,19 @@ _contents
 &lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;&lt;nobr&gt;&gt;
 &lt;map name=&quot;infographic&quot;&gt;
-    &lt;area target=&quot;&quot; alt=&quot;甲&quot; title=&quot;甲&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;116,164,98,149&quot; shape=&quot;rect&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;乙&quot; title=&quot;乙&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;88,114,106,131&quot; shape=&quot;rect&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;丙&quot; title=&quot;丙&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;81,78,98,97&quot; shape=&quot;rect&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;丁&quot; title=&quot;丁&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;set $heaven to true&gt;&gt;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;73,47,92,67&quot; shape=&quot;rect&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;戊&quot; title=&quot;戊&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;125,30,145,52&quot; shape=&quot;rect&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;己&quot; title=&quot;己&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;173,47,189,70&quot; shape=&quot;rect&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;庚&quot; title=&quot;庚&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;218,94,231,113&quot; shape=&quot;rect&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;辛&quot; title=&quot;辛&quot; coords=&quot;209,119,224,138&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;壬&quot; title=&quot;壬&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;200,143,213,160&quot; shape=&quot;rect&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;癸&quot; title=&quot;癸&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;188,167,203,182&quot; shape=&quot;rect&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;甲&quot; title=&quot;甲&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;419,306,464,349&quot; shape=&quot;rect&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;乙&quot; title=&quot;乙&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;496,219,539,261&quot; shape=&quot;rect&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;丙&quot; title=&quot;丙&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;572,127,617,169&quot; shape=&quot;rect&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;丁&quot; title=&quot;丁&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;set $heaven to true&gt;&gt;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;648,38,694,82&quot; shape=&quot;rect&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;戊&quot; title=&quot;戊&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;764,108,811,152&quot; shape=&quot;rect&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;己&quot; title=&quot;己&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;820,203,866,242&quot; shape=&quot;rect&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;庚&quot; title=&quot;庚&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;807,340,852,379&quot; shape=&quot;rect&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;辛&quot; title=&quot;辛&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;728,389,772,429&quot; shape=&quot;rect&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;壬&quot; title=&quot;壬&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;645,437,691,481&quot; shape=&quot;rect&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;癸&quot; title=&quot;癸&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-2&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;566,482,614,525&quot; shape=&quot;rect&quot; /&gt;
 &lt;/map&gt;
 &lt;div class=&quot;resizable imageMapObserve&quot; style=&quot;width: 300px;&quot;&gt;
-	&lt;img usemap=&quot;#infographic&quot; alt=&quot;影像地圖&quot; @src=&quot;setup.ImagePath+&#39;天干手勢.jpg&#39;&quot; /&gt;
+	&lt;img usemap=&quot;#infographic&quot; alt=&quot;影像地圖&quot; @src=&quot;setup.ImagePath+&#39;天干手勢.png&#39;&quot; /&gt;
 &lt;/div&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="38" name="第一章關卡1-2" tags="center" position="1575,500" size="100,100">身為天地門的拳師，第一個要學的手勢，即是比出@@color:red;天地門成立的年份@@，不忘亡國之恨。
 
@@ -4753,21 +4753,21 @@ _contents
 &lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;&lt;nobr&gt;&gt;
 &lt;map name=&quot;infographic&quot;&gt;
-    &lt;area target=&quot;&quot; alt=&quot;子&quot; title=&quot;子&quot; coords=&quot;140,139,155,155&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;丑&quot; title=&quot;丑&quot; coords=&quot;110,133,129,150&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;寅&quot; title=&quot;寅&quot; coords=&quot;75,133,98,149&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;卯&quot; title=&quot;卯&quot; coords=&quot;68,100,88,122&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;辰&quot; title=&quot;辰&quot; coords=&quot;60,67,80,86&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;巳&quot; title=&quot;巳&quot; coords=&quot;72,57,55,38&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;午&quot; title=&quot;午&quot; coords=&quot;105,22,126,40&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;未&quot; title=&quot;未&quot; coords=&quot;155,40,171,60&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;申&quot; title=&quot;申&quot; coords=&quot;199,88,210,100&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;酉&quot; title=&quot;酉&quot; coords=&quot;189,108,203,125&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;戌&quot; title=&quot;戌&quot; coords=&quot;177,131,193,148&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
-    &lt;area target=&quot;&quot; alt=&quot;亥&quot; title=&quot;亥&quot; coords=&quot;170,152,184,168&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;set $ground to true&gt;&gt;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;子&quot; title=&quot;子&quot; coords=&quot;541,418,588,459&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;丑&quot; title=&quot;丑&quot; coords=&quot;494,352,545,398&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;寅&quot; title=&quot;寅&quot; coords=&quot;452,281,500,325&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;卯&quot; title=&quot;卯&quot; coords=&quot;517,199,567,243&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;辰&quot; title=&quot;辰&quot; coords=&quot;589,114,632,160&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;巳&quot; title=&quot;巳&quot; coords=&quot;656,35,698,73&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;午&quot; title=&quot;午&quot; coords=&quot;770,105,811,153&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;未&quot; title=&quot;未&quot; coords=&quot;816,204,861,244&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;申&quot; title=&quot;申&quot; coords=&quot;811,331,858,378&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;酉&quot; title=&quot;酉&quot; coords=&quot;738,384,782,426&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;戌&quot; title=&quot;戌&quot; coords=&quot;665,434,714,476&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;亥&quot; title=&quot;亥&quot; coords=&quot;589,481,636,525&quot; shape=&quot;rect&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;set $ground to true&gt;&gt;&lt;&lt;goto &amp;quot;第一章關卡1-3&amp;quot;&gt;&gt;&#39;)&quot; /&gt;
 &lt;/map&gt;
 &lt;div class=&quot;resizable imageMapObserve&quot; style=&quot;width: 300px;&quot;&gt;
-	&lt;img usemap=&quot;#infographic&quot; alt=&quot;影像地圖&quot; @src=&quot;setup.ImagePath+&#39;地支手勢.jpg&#39;&quot; /&gt;
+	&lt;img usemap=&quot;#infographic&quot; alt=&quot;影像地圖&quot; @src=&quot;setup.ImagePath+&#39;地支手勢.png&#39;&quot; /&gt;
 &lt;/div&gt;
 &lt;&lt;/nobr&gt;&gt;
 
@@ -5908,7 +5908,7 @@ Llogo.png</tw-passagedata><tw-passagedata pid="80" name="第六章1" tags="autos
 @@color:red;小提醒：不需觸碰廟中虎爺神尊，點擊底下照片即可。@@
 &lt;&lt;nobr&gt;&gt;
 &lt;map name=&quot;infographic&quot;&gt;
-    &lt;area target=&quot;&quot; alt=&quot;下巴&quot; title=&quot;下巴&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第五章2-0&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;577,839,1103,1043&quot; shape=&quot;rect&quot; /&gt;
+    &lt;area target=&quot;&quot; alt=&quot;下巴&quot; title=&quot;下巴&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第五章2-0&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;558,749,1134,1161&quot; shape=&quot;rect&quot; /&gt;
 &lt;/map&gt;
 &lt;div class=&quot;resizable imageMapObserve&quot; style=&quot;width: 300px;&quot;&gt;
 	&lt;img usemap=&quot;#infographic&quot; alt=&quot;影像地圖&quot; @src=&quot;setup.ImagePath+&#39;興濟宮虎爺.jpg&#39;&quot; /&gt;
