--- a/tainanfist/demo.html
+++ b/tainanfist/demo.html
@@ -5867,7 +5867,7 @@ Llogo.png</tw-passagedata><tw-passagedata pid="79" name="第六章1" tags="autos
 &lt;&lt;link &#39;重新診脈&#39; &#39;第五章關卡1-5&#39;&gt;&gt;&lt;&lt;run Dialog.close()&gt;&gt;&lt;&lt;/link&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="116" name="第五章關卡1-20" tags="center autosave" position="4275,1150" size="100,100">請觸碰@@color:green;照片中@@興濟宮虎爺的特定部位
-@@color:red;小提醒：不需觸碰廟中虎爺神尊，點擊底下照片即可。@@
+@@color:red;小提醒：請勿觸碰廟中虎爺神尊，點擊底下照片即可。@@
 &lt;&lt;nobr&gt;&gt;
 &lt;map name=&quot;infographic&quot;&gt;
     &lt;area target=&quot;&quot; alt=&quot;下巴&quot; title=&quot;下巴&quot; onclick=&quot;$.wiki(&#39;&lt;&lt;goto &amp;quot;第五章2-0&amp;quot;&gt;&gt;&#39;)&quot; coords=&quot;558,749,1134,1161&quot; shape=&quot;rect&quot; /&gt;
@@ -6398,7 +6398,7 @@ A為&quot;一(1)&quot;、B為&quot;三(3)&quot;、C為&quot;祀(4)&quot;、D為&
 
 &lt;&lt;linkreplace &#39;告訴我正確答案&#39;&gt;&gt;「坐東朝西」的反向就是「坐西朝東」！
 &lt;&lt;/linkreplace&gt;&gt;&lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="161" name="第四章關卡2" tags="autosave center" position="3600,800" size="100,100">&lt;h2 class=&quot;fancy&quot;&gt;遊戲關卡&lt;/h2&gt;&lt;h1&gt;復原廟中立柱「本色」&lt;/h1&gt;
-@@color:crimson;根據玄天上帝的指示，廟中有立柱被施法的油漆污染，請你們將其復原「本色」。@@
+@@color:crimson;根據玄天上帝的指示，廟中立柱被施法的油漆污染，請你們將其復原「本色」。@@
 
 對照@@color:green;廟中立柱的實際顏色@@，找出被汙染的立柱復原顏色。
 
