--- a/tainanfist/demo.html
+++ b/tainanfist/demo.html
@@ -4347,7 +4347,7 @@ Normal text. Normal text. Normal text. Normal text. Normal text. //emphasised te
   └&lt;&lt;link &#39;【第二章關卡2】&#39;&gt;&gt;&lt;&lt;goto &#39;第二章關卡2&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
   └&lt;&lt;link &#39;【第二章關卡3】&#39;&gt;&gt;&lt;&lt;goto &#39;第二章關卡3&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
   
-  &lt;&lt;link &#39;【片刻休息-午食】&#39;&gt;&gt;&lt;&lt;goto &#39;片刻休息1&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
+  &lt;&lt;link &#39;【片刻休息-午食】&#39;&gt;&gt;&lt;&lt;goto &#39;片刻休息1&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
   
   &lt;&lt;link &#39;【第三章】&#39;&gt;&gt;&lt;&lt;goto &#39;第三章0&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
   └&lt;&lt;link &#39;【第三章關卡1】&#39;&gt;&gt;&lt;&lt;goto &#39;第三章關卡1&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
@@ -4362,7 +4362,7 @@ Normal text. Normal text. Normal text. Normal text. Normal text. //emphasised te
   └&lt;&lt;link &#39;【第五章關卡1】&#39;&gt;&gt;&lt;&lt;goto &#39;第五章關卡1&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
   └&lt;&lt;link &#39;【第五章關卡2】&#39;&gt;&gt;&lt;&lt;goto &#39;第五章關卡2&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
 
-&lt;&lt;link &#39;【片刻休息-鴨母寮古厝】&#39;&gt;&gt;&lt;&lt;goto &#39;片刻休息3&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
+&lt;&lt;link &#39;【片刻休息-鴨母寮古厝】&#39;&gt;&gt;&lt;&lt;goto &#39;片刻休息3&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
 
   &lt;&lt;link &#39;【後日談】&#39;&gt;&gt;&lt;&lt;goto &#39;第六章0&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
   └&lt;&lt;link &#39;【後日談關卡1】&#39;&gt;&gt;&lt;&lt;goto &#39;第六章關卡1&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
@@ -5284,21 +5284,21 @@ _contents
 &lt;&lt;htmlimg &quot;齊天大聖.png&quot; &quot;90%&quot;&gt;&gt;
 &lt;i&gt;「呵呵呵呵，想不到老孫也遇到此劫，不過小鬼，雖然你的拳法菜歸菜，想不到最後能醒悟五行之力，擊退惡徒。只是藏在萬福庵的『廟鑰』被人奪走。」&lt;/i&gt;&lt;/div&gt;
 
-&lt;&lt;button &#39;詢問「陳天南」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;陳天南&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;陳天南&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;div style=&#39;text-align: center;&#39;&gt;&lt;&lt;button &#39;詢問「陳天南」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;陳天南&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;陳天南&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;
 
-&lt;&lt;button &#39;詢問「清朝政府」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;清朝政府&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;清朝政府&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="69" name="陳天南" tags="" position="3200,400" size="100,100">&lt;div id=&quot;speech&quot;&gt;\
+&lt;&lt;button &#39;詢問「清朝政府」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;清朝政府&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;清朝政府&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="69" name="陳天南" tags="" position="3200,400" size="100,100">&lt;div id=&quot;speech&quot;&gt;\
 &lt;&lt;htmlimg &quot;千歲.png&quot; &quot;90%&quot;&gt;&gt;
 &lt;i&gt;「陳天南⋯⋯我原本是不想讓你捲入天地門的權力糾紛，其實天地門共分為八個直屬堂口，每一個堂口都有一位掌門，八位掌門就負責保護精怪之王的『廟鑰』，只是沒想到陳天南掌門竟與精怪合作，夥同清朝政府⋯⋯」&lt;/i&gt;&lt;/div&gt;
 
-&lt;&lt;button &#39;詢問「齊天大聖」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;齊天大聖&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;齊天大聖&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;div style=&#39;text-align: center;&#39;&gt;&lt;&lt;button &#39;詢問「齊天大聖」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;齊天大聖&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;齊天大聖&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;
 
-&lt;&lt;button &#39;詢問「清朝政府」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;清朝政府&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;清朝政府&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="70" name="清朝政府" tags="" position="3300,400" size="100,100">&lt;div id=&quot;speech&quot;&gt;\
+&lt;&lt;button &#39;詢問「清朝政府」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;清朝政府&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;清朝政府&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="70" name="清朝政府" tags="" position="3300,400" size="100,100">&lt;div id=&quot;speech&quot;&gt;\
 &lt;&lt;htmlimg &quot;千歲.png&quot; &quot;90%&quot;&gt;&gt;
 &lt;i&gt;「其實我不清楚清朝政府和精怪間的關係，但陳天南掌門一定是用了什麼理由說服了清朝政府，不然怎麼會讓精怪加入清兵的行列。」&lt;/i&gt;&lt;/div&gt;
 
-&lt;&lt;button &#39;詢問「齊天大聖」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;齊天大聖&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;齊天大聖&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;div style=&#39;text-align: center;&#39;&gt;&lt;&lt;button &#39;詢問「齊天大聖」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;齊天大聖&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;齊天大聖&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;
 
-&lt;&lt;button &#39;詢問「陳天南」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;陳天南&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;陳天南&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="71" name="第五章1內文" tags="" position="4200,100" size="100,100">&lt;&lt;if $story is 1&gt;&gt;\
+&lt;&lt;button &#39;詢問「陳天南」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;陳天南&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;陳天南&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="71" name="第五章1內文" tags="" position="4200,100" size="100,100">&lt;&lt;if $story is 1&gt;&gt;\
 你和千歲總算追上陳天南的腳步，來到了「祀典興濟宮」。
 
 興濟宮外，已經駐足許多精怪與被洗腦的兵將，看來陳天南是有備而來。
@@ -5486,7 +5486,7 @@ Llogo.png</tw-passagedata><tw-passagedata pid="79" name="第六章1" tags="autos
 &lt;&lt;htmlimg &quot;千歲.png&quot; &quot;90%&quot;&gt;&gt;
 &lt;i&gt;「看你一副嫌惡的表情，垃圾麵雖然叫做垃圾麵，但調理與食材可不隨便，你看，滿滿一碗，含有豬肝、花枝、肉絲、玉米筍、花椰菜，哼哼，這可是台南人的早餐，吃飽才有力氣去完成任務。」&lt;/i&gt;&lt;/div&gt;
 
-&lt;&lt;button &#39;選擇「阿婆布丁」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;阿婆布丁&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;阿婆布丁&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="81" name="肉臊飯" tags="" position="2500,325" size="100,100">你來到福泰飯桌，點了一碗肉臊飯，千歲露出不屑的表情。
+&lt;div style=&#39;text-align: center;&#39;&gt;&lt;&lt;button &#39;選擇「阿婆布丁」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;阿婆布丁&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;阿婆布丁&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="81" name="肉臊飯" tags="" position="2500,325" size="100,100">你來到福泰飯桌，點了一碗肉臊飯，千歲露出不屑的表情。
 &lt;div id=&quot;speech&quot;&gt;\
 &lt;&lt;htmlimg &quot;千歲.png&quot; &quot;90%&quot;&gt;&gt;
 &lt;i&gt;「那我們就去福泰飯桌吃飯，你不覺得點一碗肉臊飯很寂寞嗎？身為拳師當然還要加點魚肚湯、炸油條、蝦捲和白菜滷，多吃一點才會有力氣。」&lt;/i&gt;&lt;/div&gt;
@@ -5519,7 +5519,7 @@ Llogo.png</tw-passagedata><tw-passagedata pid="79" name="第六章1" tags="autos
 &lt;&lt;htmlimg &quot;千歲.png&quot; &quot;90%&quot;&gt;&gt;
 &lt;i&gt;「你不覺得了鹹的食物，就會想要吃甜的嗎？你看，那不是有名的阿婆布丁，這可是古早作法，只用了雞蛋做的布丁，淋上焦糖醬，可是非常厲害的，如果真的很愛，請一定要買『巨無霸布丁』。」&lt;/i&gt;&lt;/div&gt;
 
-&lt;&lt;button &#39;你選擇「火屬性/垃圾麵」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;垃圾麵&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;垃圾麵&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="85" name="片刻休息1" tags="autosave center" position="2500,100" size="100,100">&lt;&lt;set $story to 1&gt;&gt;&lt;&lt;set $location to &#39;午食&#39;&gt;&gt;\
+&lt;div style=&#39;text-align: center;&#39;&gt;&lt;&lt;button &#39;你選擇「火屬性/垃圾麵」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;垃圾麵&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;垃圾麵&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="85" name="片刻休息1" tags="autosave center" position="2500,100" size="100,100">&lt;&lt;set $story to 1&gt;&gt;&lt;&lt;set $location to &#39;午食&#39;&gt;&gt;\
 &lt;h2 class=&quot;fancy&quot;&gt;片刻休息&lt;/h2&gt;&lt;h1&gt;午食&lt;/h1&gt;
 &lt;div id=&#39;story&#39;&gt;&lt;&lt;include &#39;片刻休息1內文&#39;&gt;&gt;&lt;/div&gt;
 
@@ -5573,9 +5573,9 @@ Llogo.png</tw-passagedata><tw-passagedata pid="79" name="第六章1" tags="autos
 &lt;&lt;if $story is 2&gt;&gt;\
 千歲敏銳的鼻子已經嗅到市場內的美食，便拉著你走到市場內。
 
-&lt;&lt;button &#39;選擇「阿婆布丁」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;阿婆布丁&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;阿婆布丁&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;div style=&#39;text-align: center;&#39;&gt;&lt;&lt;button &#39;選擇「阿婆布丁」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;阿婆布丁&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;阿婆布丁&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;
 
-&lt;&lt;button &#39;你選擇「火屬性/垃圾麵」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;垃圾麵&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;垃圾麵&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;&lt;button &#39;你選擇「火屬性/垃圾麵」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;垃圾麵&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;垃圾麵&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;
 &lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;button &#39;結束選擇&#39;&gt;&gt;&lt;&lt;set $story to $story + 1&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;片刻休息3內文&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;
 &lt;&lt;/if&gt;&gt;\
 &lt;&lt;if $story is 3&gt;&gt;\
@@ -6402,11 +6402,11 @@ A為&quot;一(1)&quot;、B為&quot;三(3)&quot;、C為&quot;祀(4)&quot;、D為&
 &lt;&lt;if $story is 4&gt;&gt;\
 你紅著臉，急忙起身，便詢問兩人剛才在萬福庵發生的事情。
 
-&lt;&lt;button &#39;詢問「齊天大聖」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;齊天大聖&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;齊天大聖&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;div style=&#39;text-align: center;&#39;&gt;&lt;&lt;button &#39;詢問「齊天大聖」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;齊天大聖&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;齊天大聖&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;
 
 &lt;&lt;button &#39;詢問「陳天南」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;陳天南&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;陳天南&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;
 
-&lt;&lt;button &#39;詢問「清朝政府」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;清朝政府&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;清朝政府&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;&lt;button &#39;詢問「清朝政府」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;清朝政府&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;清朝政府&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;
 
 &lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;button &#39;結束詢問&#39;&gt;&gt;&lt;&lt;set $story to $story + 1&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;第三章4內文&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;
 &lt;&lt;/if&gt;&gt;\
