--- a/tainanfist/demo.html
+++ b/tainanfist/demo.html
@@ -5987,14 +5987,14 @@ Llogo.png</tw-passagedata><tw-passagedata pid="79" name="第六章1" tags="autos
 知道籤號後，可以至神龕旁領取籤號對應的藥籤。
 @@color:red;小提醒：此步驟不需要實際至神龕拿取藥籤。@@
 
-&lt;&lt;link &#39;拿取藥籤至供桌&#39;&gt;&gt;&lt;&lt;replace &quot;#text&quot;&gt;&gt;拿至供桌後，還要擲筊確認是否有需要增加藥劑帖數。
+&lt;&lt;button &#39;拿取藥籤至供桌&#39;&gt;&gt;&lt;&lt;replace &quot;#text&quot;&gt;&gt;拿至供桌後，還要擲筊確認是否有需要增加藥劑帖數。
 
 不過當你擲筊時，卻吹來一陣怪風，把藥籤吹到運籤的籤筒上。
 不僅如此，擲出的杯筊，一個靠在運籤的籤筒上，一個壓在藥籤上&lt;em&gt;「水四分煎二分」&lt;/em&gt;的&quot;四&quot;、&quot;二&quot;兩字。
 
 千歲說，這一定就是保生大帝的暗示，指@@color:green;靈籤的第四十二首@@與真相有關。
 
-&lt;&lt;button &#39;確認靈籤內容&#39; &#39;第五章關卡1-19&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="123" name="第四章1" tags="autosave center" position="3600,100" size="100,100">&lt;&lt;set $story to 1&gt;&gt;
+&lt;&lt;button &#39;確認靈籤內容&#39; &#39;第五章關卡1-19&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="123" name="第四章1" tags="autosave center" position="3600,100" size="100,100">&lt;&lt;set $story to 1&gt;&gt;
 &lt;h2 class=&quot;fancy&quot;&gt;第四章&lt;/h2&gt;&lt;h1&gt;追查&lt;/h1&gt;
 &lt;div id=&#39;story&#39;&gt;&lt;&lt;include &#39;第四章1內文&#39;&gt;&gt;&lt;/div&gt;
 
