--- a/tainanfist/demo.html
+++ b/tainanfist/demo.html
@@ -5623,15 +5623,15 @@ Llogo.png</tw-passagedata><tw-passagedata pid="79" name="第六章1" tags="autos
 &lt;&lt;if $story is 4&gt;&gt;\
 &lt;div id=&quot;speech&quot;&gt;\
 &lt;&lt;htmlimg &quot;千歲.png&quot; &quot;90%&quot;&gt;&gt;
-&lt;i&gt;「還是讓你給發現了⋯⋯不知道你是否發現⋯⋯其實我知道陳天南掌門被精怪附身的事情，因為我們就是在這裡對抗無支岐。」&lt;/i&gt;&lt;/div&gt;
+&lt;i&gt;「還是讓你給發現了⋯⋯不知道你是否發現⋯⋯其實我知道陳天南掌門被精怪附身的事情，因為我們就是在這裡對抗無支歧。」&lt;/i&gt;&lt;/div&gt;
 &lt;&lt;/if&gt;&gt;\
 &lt;&lt;if $story is 5&gt;&gt;\
-千歲回想那段記憶，親眼見到無支岐附身到掌門身上，陳天南祈求千歲，連同他，將無支岐一同消滅，但千歲沒有勇氣。
+千歲回想那段記憶，親眼見到無支歧附身到掌門身上，陳天南祈求千歲，連同他，將無支歧一同消滅，但千歲沒有勇氣。
 &lt;&lt;/if&gt;&gt;\
 &lt;&lt;if $story is 6&gt;&gt;\
 &lt;div id=&quot;speech&quot;&gt;\
 &lt;&lt;htmlimg &quot;千歲.png&quot; &quot;90%&quot;&gt;&gt;
-&lt;i&gt;「因為我的心軟，才會導致整個天地門堂口的消失⋯⋯我今天就是要修復被無支岐破壞，關於精怪之王的封印，你願意幫助我嗎？」&lt;/i&gt;&lt;/div&gt;
+&lt;i&gt;「因為我的心軟，才會導致整個天地門堂口的消失⋯⋯我今天就是要修復被無支歧破壞，關於精怪之王的封印，你願意幫助我嗎？」&lt;/i&gt;&lt;/div&gt;
 &lt;&lt;/if&gt;&gt;\
 &lt;&lt;if $story is 7&gt;&gt;\
 你點點頭，從千歲手中接過三老爺宮的「廟鑰」。
@@ -5665,7 +5665,7 @@ Llogo.png</tw-passagedata><tw-passagedata pid="79" name="第六章1" tags="autos
 你感覺到封印正在修復，但沒過多久，機關突然停止。
 &lt;&lt;/if&gt;&gt;\
 &lt;&lt;if $story is 2&gt;&gt;\
-從封印中鑽出一只龐大的觸角，難道就像無支岐口中所說的，精怪之王已經甦醒了⋯⋯
+從封印中鑽出一只龐大的觸角，難道就像無支歧口中所說的，精怪之王已經甦醒了⋯⋯
 &lt;&lt;/if&gt;&gt;\
 &lt;&lt;if $story is 3&gt;&gt;\
 你和千歲站起身，擺出拳師獨有的架式，朝向那未知的觸角，發出怒吼。
@@ -5786,7 +5786,7 @@ Llogo.png</tw-passagedata><tw-passagedata pid="79" name="第六章1" tags="autos
 &lt;div id=&quot;speech&quot; style=&quot;background-color: rgb(247 242 231 / 90%);&quot;&gt;\
     &lt;&lt;= &quot;&lt;img src=&#39;&quot; + setup.ImagePath + &quot;無支歧&quot; + $random +&quot;.png&#39; width=&#39;90%&#39;&gt;&quot;&gt;&gt;
     &lt;i&gt;&lt;&lt;if $hp is 3&gt;&gt;&lt;table style=&#39;width: 120px;margin: auto;&#39;&gt;&lt;tr&gt;&lt;td&gt;&lt;&lt;htmlimg &quot;hp.png&quot; &quot;20px&quot;&gt;&gt;&lt;/td&gt;&lt;td&gt;&lt;&lt;htmlimg &quot;hp.png&quot; &quot;20px&quot;&gt;&gt;&lt;/td&gt;&lt;td&gt;&lt;&lt;htmlimg &quot;hp.png&quot; &quot;20px&quot;&gt;&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;if $hp is 2&gt;&gt;&lt;table style=&#39;width: 120px;margin: auto;&#39;&gt;&lt;tr&gt;&lt;td&gt;&lt;&lt;htmlimg &quot;hp.png&quot; &quot;20px&quot;&gt;&gt;&lt;/td&gt;&lt;td&gt;&lt;&lt;htmlimg &quot;hp.png&quot; &quot;20px&quot;&gt;&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;if $hp is 1&gt;&gt;&lt;table style=&#39;width: 120px;margin: auto;&#39;&gt;&lt;tr&gt;&lt;td&gt;&lt;&lt;htmlimg &quot;hp.png&quot; &quot;20px&quot;&gt;&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;&lt;/if&gt;&gt;&lt;/i&gt;
-    &lt;i&gt;&lt;em&gt;選擇克制無知岐屬性的@@color:green;藥材@@&lt;/em&gt;&lt;/i&gt;
+    &lt;i&gt;&lt;em&gt;選擇克制無支歧屬性的@@color:green;藥材@@&lt;/em&gt;&lt;/i&gt;
     &lt;i&gt;&lt;&lt;listbox &quot;$med&quot;&gt;&gt;
                 &lt;&lt;option &quot;沒藥&quot; 5&gt;&gt;
                 &lt;&lt;option &quot;冰片&quot; 3&gt;&gt;
