--- a/tainanfist/demo.html
+++ b/tainanfist/demo.html
@@ -5486,7 +5486,7 @@ Llogo.png</tw-passagedata><tw-passagedata pid="79" name="第六章1" tags="autos
 &lt;&lt;htmlimg &quot;千歲.png&quot; &quot;90%&quot;&gt;&gt;
 &lt;i&gt;「看你一副嫌惡的表情，垃圾麵雖然叫做垃圾麵，但調理與食材可不隨便，你看，滿滿一碗，含有豬肝、花枝、肉絲、玉米筍、花椰菜，哼哼，這可是台南人的早餐，吃飽才有力氣去完成任務。」&lt;/i&gt;&lt;/div&gt;
 
-&lt;div style=&#39;text-align: center;&#39;&gt;&lt;&lt;button &#39;選擇「阿婆布丁」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;阿婆布丁&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;阿婆布丁&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="81" name="肉臊飯" tags="" position="2500,325" size="100,100">你來到福泰飯桌，點了一碗肉臊飯，千歲露出不屑的表情。
+&lt;div style=&#39;text-align: center;&#39;&gt;&lt;&lt;button &#39;選擇「金屬性/布丁/阿婆布丁」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;阿婆布丁&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;阿婆布丁&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="81" name="肉臊飯" tags="" position="2500,325" size="100,100">你來到福泰飯桌，點了一碗肉臊飯，千歲露出不屑的表情。
 &lt;div id=&quot;speech&quot;&gt;\
 &lt;&lt;htmlimg &quot;千歲.png&quot; &quot;90%&quot;&gt;&gt;
 &lt;i&gt;「那我們就去福泰飯桌吃飯，你不覺得點一碗肉臊飯很寂寞嗎？身為拳師當然還要加點魚肚湯、炸油條、蝦捲和白菜滷，多吃一點才會有力氣。」&lt;/i&gt;&lt;/div&gt;
@@ -5573,7 +5573,7 @@ Llogo.png</tw-passagedata><tw-passagedata pid="79" name="第六章1" tags="autos
 &lt;&lt;if $story is 2&gt;&gt;\
 千歲敏銳的鼻子已經嗅到市場內的美食，便拉著你走到市場內。
 
-&lt;div style=&#39;text-align: center;&#39;&gt;&lt;&lt;button &#39;選擇「阿婆布丁」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;阿婆布丁&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;阿婆布丁&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;div style=&#39;text-align: center;&#39;&gt;&lt;&lt;button &#39;選擇「金屬性/布丁/阿婆布丁」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;阿婆布丁&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;阿婆布丁&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;
 
 &lt;&lt;button &#39;你選擇「火屬性/垃圾麵」&#39;&gt;&gt;&lt;&lt;run _ask.pushUnique(&#39;垃圾麵&#39;)&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;垃圾麵&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;
 &lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;button &#39;結束選擇&#39;&gt;&gt;&lt;&lt;set $story to $story + 1&gt;&gt;&lt;&lt;replace &#39;#story&#39;&gt;&gt;&lt;&lt;include &#39;片刻休息3內文&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;
